--- a/dockerstack-application/Services/AuthService/Views/_ViewImports.cshtml
+++ b/dockerstack-application/Services/AuthService/Views/_ViewImports.cshtml
@@ -1,7 +1,2 @@
-@using Microsoft.AspNetCore.Identity
-
-@using Agility.Framework.IdentityServer.Models
-@using Agility.Framework.IdentityServer.Models.AccountViewModels
-@using Agility.Framework.IdentityServer.Models.ManageViewModels
+﻿@using IdentityServer4.Quickstart.UI
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@using IdentityServer4.Quickstart.UI
